--- a/androiddbunit/build.gradle
+++ b/androiddbunit/build.gradle
@@ -8,7 +8,7 @@ android {
         minSdkVersion 15
         targetSdkVersion 22
         versionCode 1
-        versionName "1.0"
+        versionName "1.2.0"
     }
 
     buildTypes {
@@ -42,6 +42,7 @@ android.libraryVariants.all { variant ->
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile 'com.android.support:support-annotations:22.2.+'
     compile 'org.slf4j:slf4j-api:1.7.+'
     compile 'org.slf4j:slf4j-android:1.7.+'
     compile('org.dbunit:dbunit:2.5.+') {
